Changed menu link padding to 11px. At 10px we prevented the wrapping on small screens, just seeing if we can pad a little more.

--- a/css/labWebsite.css
+++ b/css/labWebsite.css
@@ -35,7 +35,7 @@
 .menuItem a
 {
     border-bottom: 1px solid white;        /* required so that we can simulate a link underline in the a:hover without the header wobbling by 1px */
-    padding: 0 10px;
+    padding: 0 11px;
     margin: 0;
     color: #757575;
     text-decoration: none;
